--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  intl: ^0.16.1
+  morpheus: ^1.2.2+1
+  line_icons: ^0.2.0
+
+  
 
 dev_dependencies:
   flutter_test:
@@ -48,6 +53,13 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+      - images/gardener.png
+      - images/tree.png
+      - images/tree1.png
+      - images/trees.png
+      - images/grass.png
+      - images/grass1.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
