--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   line_icons: ^0.2.0
   shrink_sidemenu: ^1.0.0+3
   liquid_ui: ^1.0.0+9
+  page_transition: ^1.1.7+3
+  animate_icons: ^1.0.0
 
   
 
@@ -56,12 +58,7 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   assets:
-      - images/gardener.png
-      - images/tree.png
-      - images/tree1.png
-      - images/trees.png
-      - images/grass.png
-      - images/grass1.png
+      - images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -88,3 +85,7 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+  fonts:
+    - family: RobotoSlab
+      fonts:
+        - asset: fonts/RobotoSlab_VariableFont_wght.ttf
