--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   select_form_field: ^1.1.0
   sqflite: ^1.3.2+1
   cool_alert: ^1.0.3
+  path_provider: ^1.6.27
   
 
 dev_dependencies:
