--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   select_form_field: ^1.1.0
   sqflite: ^1.3.2+1
   cool_alert: ^1.0.3
+  flutter_date_picker_timeline: ^0.1.5
+  scroll_snap_list: ^0.6.0
+  timeline_list: ^0.0.3
   
 
 dev_dependencies:
