--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,13 +37,14 @@ dependencies:
   animate_icons: ^1.0.0
   get:
   flutter_iconpicker: ^2.2.2
-  mk_drop_down_menu: ^1.1.0
   select_form_field: ^1.1.0
   sqflite: ^1.3.2+1
   cool_alert: ^1.0.3
   flutter_date_picker_timeline: ^0.1.5
   scroll_snap_list: ^0.6.0
   timeline_list: ^0.0.3
+  flutter_animation_progress_bar: ^1.0.6
+  table_calendar: ^2.3.3
   
 
 dev_dependencies:
