Finished note screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   fl_chart: ^0.12.2
   step_progress_indicator: ^0.2.5+8
   percent_indicator: ^2.1.9
+  flutter_slidable:
   
 
 dev_dependencies:
