--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,7 @@ dependencies:
   fl_chart: ^0.12.2
   step_progress_indicator: ^0.2.5+8
   percent_indicator: ^2.1.9
-  
+  flutter_swipe_action_cell: ^1.3.2
 
 dev_dependencies:
   flutter_test:
