--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,11 +29,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   intl: ^0.16.1
-  morpheus: ^1.2.2+1
-  line_icons: ^0.2.0
+  #morpheus: ^1.2.2+1
+  #line_icons: ^0.2.0
   shrink_sidemenu: ^1.0.0+3
-  liquid_ui: ^1.0.0+9
-  page_transition: ^1.1.7+3
+  #liquid_ui: ^1.0.0+9
+  # page_transition: ^1.1.7+3
   animate_icons: ^1.0.0
   get:
   flutter_iconpicker: ^2.2.2
@@ -41,13 +41,13 @@ dependencies:
   sqflite: ^1.3.2+1
   cool_alert: ^1.0.3
   flutter_date_picker_timeline: ^0.1.5
-  scroll_snap_list: ^0.6.0
+  #scroll_snap_list: ^0.6.0
   timeline_list: ^0.0.3
   flutter_animation_progress_bar: ^1.0.6
   table_calendar: ^2.3.3
   fl_chart: ^0.12.2
   step_progress_indicator: ^0.2.5+8
-  percent_indicator: ^2.1.9
+  # percent_indicator: ^2.1.9
   flutter_swipe_action_cell: ^1.3.2
 
 dev_dependencies:
