--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   # percent_indicator: ^2.1.9
   flutter_swipe_action_cell: ^1.3.2
   flutter_launcher_icons: ^0.8.1
+  flutter_spinkit: ^4.1.2+1
 
 flutter_icons:
   android: "habit_tracker"
