--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
-  intl: ^0.16.1
+  intl: ^0.17.0
   #morpheus: ^1.2.2+1
   #line_icons: ^0.2.0
   shrink_sidemenu: ^1.0.0+3
@@ -40,7 +40,7 @@ dependencies:
   select_form_field: ^1.1.0
   sqflite: ^1.3.2+1
   cool_alert: ^1.0.3
-  flutter_date_picker_timeline: ^0.1.5
+  flutter_date_picker_timeline: ^0.3.1
   #scroll_snap_list: ^0.6.0
   timeline_list: ^0.0.3
   flutter_animation_progress_bar: ^1.0.6
@@ -51,6 +51,9 @@ dependencies:
   flutter_swipe_action_cell: ^1.3.2
   flutter_launcher_icons: ^0.8.1
   flutter_spinkit: ^4.1.2+1
+  firebase_core: ^1.0.3
+  firebase_auth: ^1.1.0
+  google_sign_in: ^5.0.2
 
 flutter_icons:
   android: "habit_tracker"
