--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,15 +52,17 @@ dependencies:
   flutter_launcher_icons: ^0.8.1
   flutter_spinkit: ^4.1.2+1
   firebase_core: ^1.0.4
+  firebase_messaging: ^9.1.3
   firebase_auth: ^1.1.1
   google_sign_in: ^5.0.2
   flutter_facebook_login: ^3.0.0
   wave: ^0.2.0
+  flutter_local_notifications: ^5.0.0+2
 
 flutter_icons:
   android: "habit_tracker"
   ios: true
-  image_path: "images/app_icon/habit_tracker.png"
+  image_path: "assets/app_icon/habit_tracker.png"
 
 dev_dependencies:
   flutter_test:
