--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   pedometer: ^3.0.0
   day_night_time_picker: ^1.0.1+1
   syncfusion_flutter_datepicker: ^19.1.58-beta
+  shared_preferences: ^2.0.5
 
 flutter_icons:
   android: "habit_tracker"
