--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,6 @@ dependencies:
   flutter_animation_progress_bar: ^1.0.6
   table_calendar: ^2.3.3
   fl_chart: ^0.12.2
-  step_progress_indicator: ^0.2.5+8
   # percent_indicator: ^2.1.9
   flutter_swipe_action_cell: ^1.3.2
   flutter_launcher_icons: ^0.8.1
@@ -64,6 +63,8 @@ dependencies:
   day_night_time_picker: ^1.0.1+1
   syncfusion_flutter_datepicker: ^19.1.58-beta
   shared_preferences: ^2.0.5
+  percent_indicator: ^3.0.1
+  jiffy: ^4.1.0
 
 flutter_icons:
   android: "habit_tracker"
