--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,7 +52,7 @@ dependencies:
   flutter_swipe_action_cell: ^1.3.2
   flutter_launcher_icons: ^0.8.1
   flutter_spinkit: ^4.1.2+1
-  firebase_core: ^1.0.4
+#  firebase_core: ^1.0.4
   firebase_messaging: ^9.1.3
   firebase_auth: ^1.1.1
   google_sign_in: ^5.0.2
