--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,48 +24,48 @@ dependencies:
   flutter:
     sdk: flutter
 
-  flutter_date_picker_timeline:
-    git:
-      url: https://github.com/khduy/flutter_date_picker_timeline
+  #  flutter_date_picker_timeline:
+  #    git:
+  #      url: https://github.com/khduy/flutter_date_picker_timeline
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.0
+  cupertino_icons: ^1.0.3
   intl: ^0.17.0
   #morpheus: ^1.2.2+1
   #line_icons: ^0.2.0
   shrink_sidemenu: ^1.0.0+3
   #liquid_ui: ^1.0.0+9
   # page_transition: ^1.1.7+3
-  animate_icons: ^1.0.0
+  animate_icons: ^2.0.0
   get:
-  flutter_iconpicker: ^2.2.2
-  select_form_field: ^1.1.0
+  flutter_iconpicker: ^3.0.0
+  select_form_field: ^2.0.0
   sqflite: ^2.0.0+3
-  cool_alert: ^1.0.3
-  #flutter_date_picker_timeline: ^0.3.1
+  cool_alert: ^1.1.0
+  flutter_date_picker_timeline: ^0.3.1
   #scroll_snap_list: ^0.6.0
-  timeline_list: ^0.0.3
-  flutter_animation_progress_bar: ^1.0.6
-  table_calendar: ^2.3.3
+  timeline_list: ^0.0.5
+  flutter_animation_progress_bar: ^2.0.0
+  table_calendar: ^3.0.0
   fl_chart: ^0.12.2
   # percent_indicator: ^2.1.9
-  flutter_swipe_action_cell: ^1.3.2
-  flutter_launcher_icons: ^0.8.1
-  flutter_spinkit: ^4.1.2+1
-#  firebase_core: ^1.0.4
+  flutter_swipe_action_cell: ^2.0.7
+  flutter_launcher_icons: ^0.9.0
+  flutter_spinkit: ^5.0.0
+  firebase_core: ^1.1.0
   firebase_messaging: ^9.1.3
-  firebase_auth: ^1.1.1
+  firebase_auth: ^1.1.3
   google_sign_in: ^5.0.2
   flutter_facebook_login: ^3.0.0
   wave: ^0.2.0
-  flutter_local_notifications: ^5.0.0+2
+  flutter_local_notifications: ^5.0.0+4
   pedometer: ^3.0.0
-  day_night_time_picker: ^1.0.1+1
-  syncfusion_flutter_datepicker: ^19.1.58-beta
+  day_night_time_picker: ^1.0.2
+  syncfusion_flutter_datepicker: ^19.1.59-beta
   shared_preferences: ^2.0.5
   percent_indicator: ^3.0.1
   jiffy: ^4.1.0
-  sign_in_with_apple: ^3.0.0
+#  sign_in_with_apple: ^3.0.0
 
 flutter_icons:
   android: "habit_tracker"
