--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>1009484410181-m704damereab8d6r80uvn9886o6a0fmm.apps.googleusercontent.com</string>
+	<string>1009484410181-bdiigm82v946dm2793faatiajaarj91c.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.1009484410181-m704damereab8d6r80uvn9886o6a0fmm</string>
+	<string>com.googleusercontent.apps.1009484410181-bdiigm82v946dm2793faatiajaarj91c</string>
 	<key>ANDROID_CLIENT_ID</key>
 	<string>1009484410181-0etodg3js327occj5omm0vm4r7k1ba23.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
@@ -15,7 +15,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.example.habitTracker</string>
+	<string>com.app.flutter.habitracker</string>
 	<key>PROJECT_ID</key>
 	<string>habitracker-anduy</string>
 	<key>STORAGE_BUCKET</key>
@@ -31,6 +31,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:1009484410181:ios:d29e9509caaaf8c3e0a22c</string>
+	<string>1:1009484410181:ios:5833aa4ab52736b2e0a22c</string>
 </dict>
 </plist>
