--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,7 +56,7 @@ dependencies:
   firebase_messaging: ^9.1.4
   firebase_auth: ^1.1.4
   google_sign_in: ^5.0.2
-  flutter_facebook_login: ^3.0.0
+  flutter_login_facebook: ^1.0.1
   wave: ^0.2.0
   flutter_local_notifications: ^5.0.0+4
   pedometer: ^3.0.0
