--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,9 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-  #  flutter_date_picker_timeline:
-  #    git:
-  #      url: https://github.com/khduy/flutter_date_picker_timeline
+  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.3
@@ -42,7 +40,7 @@ dependencies:
   select_form_field: ^2.0.0
   sqflite: ^2.0.0+3
   cool_alert: ^1.1.0
-  flutter_date_picker_timeline: ^0.3.1
+  #flutter_date_picker_timeline: ^0.3.1
   #scroll_snap_list: ^0.6.0
   timeline_list: ^0.0.5
   flutter_animation_progress_bar: ^2.0.0
@@ -67,6 +65,11 @@ dependencies:
   jiffy: ^4.1.0
 #  sign_in_with_apple: ^3.0.0
   flutter_svg: ^0.22.0
+
+# custom package
+  flutter_date_picker_timeline:
+    git:
+      url: https://github.com/khduy/flutter_date_picker_timeline
 
 flutter_icons:
   android: "habit_tracker"
