--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   # page_transition: ^1.1.7+3
   animate_icons: ^2.0.0
   get:
-  flutter_iconpicker: ^3.0.0
+  flutter_iconpicker: ^3.0.1+2
   select_form_field: ^2.0.0
   sqflite: ^2.0.0+3
   cool_alert: ^1.1.0
@@ -49,25 +49,30 @@ dependencies:
   table_calendar: ^3.0.0
   fl_chart: ^0.36.1
   # percent_indicator: ^2.1.9
-  flutter_swipe_action_cell: ^2.0.7
+  flutter_swipe_action_cell: ^2.1.0
   flutter_launcher_icons: ^0.9.0
   flutter_spinkit: ^5.0.0
-  firebase_core: ^1.1.1
-  firebase_messaging: ^9.1.4
-  firebase_auth: ^1.1.4
-  google_sign_in: ^5.0.2
+  firebase_core: ^1.2.0
+  firebase_messaging: ^10.0.0
+  firebase_auth: ^1.2.0
+  google_sign_in: ^5.0.3
   flutter_login_facebook: ^1.0.1
   wave: ^0.2.0
   flutter_local_notifications: ^5.0.0+4
   pedometer: ^3.0.0
   day_night_time_picker: ^1.0.2
-  syncfusion_flutter_datepicker: ^19.1.59-beta
+  syncfusion_flutter_datepicker: ^19.1.64-beta
   shared_preferences: ^2.0.5
   percent_indicator: ^3.0.1
   jiffy: ^4.1.0
-#  sign_in_with_apple: ^3.0.0
+  #  sign_in_with_apple: ^3.0.0
   flutter_svg: ^0.22.0
   dio: ^4.0.0
+  direct_select: ^2.0.0
+  flare_flutter: ^3.0.0
+  url_launcher: ^6.0.4
+  rate_my_app: ^1.1.0+1
+  fluttertoast: ^8.0.7
 
 flutter_icons:
   android: "habit_tracker"
@@ -96,6 +101,7 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - assets/images/flare/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
