--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.13.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -29,31 +29,31 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.3
   intl: ^0.17.0
-  shrink_sidemenu: ^1.0.0+3
+  flutter_zoom_drawer: ^2.0.2+4
   animate_icons: ^2.0.0
   get:
-  flutter_iconpicker: 3.0.1+2
+  flutter_iconpicker: ^3.0.2
   select_form_field: ^2.0.0
   sqflite: ^2.0.0+3
   cool_alert: ^1.1.0
-  # flutter_date_picker_timeline: ^0.3.1
-  timeline_list: ^0.0.5
+  flutter_date_picker_timeline: ^0.3.1
+  timelines: ^0.1.0
   flutter_animation_progress_bar: ^2.0.0
   table_calendar: ^3.0.0
   fl_chart: ^0.36.1
   flutter_swipe_action_cell: ^2.1.0
   flutter_launcher_icons: ^0.9.0
   flutter_spinkit: ^5.0.0
-  firebase_core: ^1.2.0
-  firebase_messaging: ^10.0.0
-  firebase_auth: ^1.2.0
+  firebase_core: ^1.2.1
+  firebase_messaging: ^10.0.1
+  firebase_auth: ^1.3.0
   google_sign_in: ^5.0.4
   flutter_login_facebook: ^1.0.1
   wave: ^0.2.0
-  flutter_local_notifications: ^5.0.0+4
+  flutter_local_notifications: ^6.0.0
   pedometer: ^3.0.0
   day_night_time_picker: ^1.0.2
-  syncfusion_flutter_datepicker: ^19.1.65-beta
+  syncfusion_flutter_datepicker: ^19.1.66-beta
   shared_preferences: ^2.0.6
   percent_indicator: ^3.0.1
   jiffy: ^4.1.0
@@ -62,14 +62,13 @@ dependencies:
   flutter_svg: ^0.22.0
   dio: ^4.0.0
   direct_select: ^2.0.0
-  flare_flutter: ^3.0.0
   url_launcher: ^6.0.4
   rate_my_app: ^1.1.0+1
   fluttertoast: ^8.0.7
   # custom package ===========================================
-  flutter_date_picker_timeline:
-    git:
-      url: https://github.com/khduy/flutter_date_picker_timeline
+#  flutter_date_picker_timeline:
+#    git:
+#      url: https://github.com/khduy/flutter_date_picker_timeline
 
 flutter_icons:
   android: "habit_tracker"
